# match-psu-names

./: .gitignore  match_psu_names.py  matched.xlsx  pyproject.toml  school_authorities.json.template
data/: active_regional_lab_schools_report.csv  authorities.json
src/: K12 and Community College IP Addressing_2022_04_18 - 2022-04-18.csv  SVF.csv  active_charter_schools_report.csv  active_lea_school_district_schools_report.csv  match_psu_names.py
